assigned id's to all <p> elements

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
    <!-- partial:index.partial.html -->
-   <p>velox</p>
-   <p>zerda</p>
-   <p>lagopus</p>
+   <p id="fox-1">velox</p>
+   <p id="fox-1">zerda</p>
+   <p id="fox-1">lagopus</p>
    <!-- partial -->
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
