second task has been prepared

--- a/index.html
+++ b/index.html
@@ -12,10 +12,21 @@
 
 <body>
    <!-- partial:index.partial.html -->
-   <p id="fox-1">velox</p>
-   <p id="fox-2">zerda</p>
-   <p id="fox-3">lagopus</p>
+   <p class="first-task" id="fox-1">velox</p>
+   <p class="first-task" id="fox-2">zerda</p>
+   <p class="first-task" id="fox-3">lagopus</p>
    <!-- partial -->
+
+
+   <!-- second task's code-->
+   <main>
+      <p class="north centered bold-text">Észak</p>
+      <p class="east centered bold-text">Kelet</p>
+      <p class="south centered bold-text">Dél</p>
+      <p class="west centered bold-text">Nyugat</p>
+    </main>
+    <!-- end of second task's code -->
+
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
    <script src=".\scripts.js"></script>
